--- a/HR_Analytics.ipynb
+++ b/HR_Analytics.ipynb
@@ -491,7 +491,7 @@
    "id": "e4155375-b87a-42b7-a17b-12ea0c96d126",
    "metadata": {},
    "source": [
-    "# GEMDER DISTRIBUTION"
+    "# GENDER DISTRIBUTION"
    ]
   },
   {
